--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ca.hwlo.sensory" >
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,6 +22,14 @@
         <activity
             android:name=".SensorActivity"
             android:label="@string/title_activity_sensor" >
+        </activity>
+        <activity
+            android:name=".VoiceDetection"
+            android:label="@string/title_activity_voice_detection" >
+        </activity>
+        <activity
+            android:name=".MoveDetection"
+            android:label="@string/title_activity_move_detection" >
         </activity>
     </application>
 
